<resources>
    <string name="app_name">MusicPlayer Moxy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="list">List</string>
    <string name="player">Player</string>
    <string name="pick_a_song_from_song_list">Pick a song from song list</string>
    <string name="coverart">cover art</string>
    <string name="play_pause">play/pause</string>
    <string name="refresh">Refresh</string>
    <string name="there_are_no_songs_on_device">There are no songs on device.</string>
    <string name="please_give_this_app_permission_to_access_nyour_media">Please give this app permission to access\nyour media.</string>
    <string name="give_access">Give access</string>
    <string name="loading">Loading…</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="pick">Pick</string>
</resources>