<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.player.PlayerFragment">

    <ImageView
        android:id="@+id/ivCover"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_margin="@dimen/def_margin"
        android:contentDescription="@string/coverart"
        app:srcCompat="@drawable/img_no_album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/def_margin"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCover">

        <TextView
            android:id="@+id/tvTitlePlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvArtistPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="24sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/btnPlayPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/def_margin"
        android:contentDescription="@string/play_pause"
        app:srcCompat="@drawable/ic_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTitle" />

    <LinearLayout
        android:id="@+id/llEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/def_margin"
            android:text="@string/pick_a_song_from_song_list"
            app:drawableTopCompat="@drawable/ic_no_song_selected" />

        <Button
            android:id="@+id/btnPickSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/def_margin"
            android:text="@string/pick" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>